--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
+    "@swc/wasm-web": "^1.3.74",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@uiw/codemirror-theme-github": "^4.21.9",
+    "@uiw/react-codemirror": "^4.21.9",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "install": "^0.13.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
