--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/view": "^6.16.0",
     "@swc/wasm-web": "^1.3.74",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
