--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "printWidth": 80,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "endOfLine": "lf",
+  "trailingComma": "es5",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
