--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.1.9",
     "@codemirror/view": "^6.16.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@swc/wasm-web": "^1.3.74",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
@@ -20,17 +22,21 @@
     "@uiw/codemirror-theme-github": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "install": "^0.13.0",
+    "lucide-react": "^0.265.0",
     "next": "13.4.12",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
   },
   "devDependencies": {
