--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@codemirror/view": "^6.16.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@swc/wasm-web": "^1.3.74",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
@@ -24,6 +25,8 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "d3-hierarchy": "^3.1.2",
+    "elkjs": "^0.8.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "install": "^0.13.0",
@@ -33,6 +36,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reactflow": "^11.7.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.3",
@@ -43,6 +47,7 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@commitlint/cz-commitlint": "^17.6.7",
+    "@types/d3-hierarchy": "^3.1.2",
     "commitizen": "^4.3.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
