--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@codemirror/lang-javascript": "^6.1.9",
     "@codemirror/view": "^6.16.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@swc/wasm-web": "^1.3.74",
@@ -25,7 +26,6 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "d3-hierarchy": "^3.1.2",
     "elkjs": "^0.8.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -47,7 +47,6 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@commitlint/cz-commitlint": "^17.6.7",
-    "@types/d3-hierarchy": "^3.1.2",
     "commitizen": "^4.3.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
