ci: add unused imported to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "plugins": ["simple-import-sort", "jsx-a11y"],
+  "plugins": ["simple-import-sort", "unused-imports", "jsx-a11y"],
   "extends": [
     "next/core-web-vitals",
     "plugin:tailwindcss/recommended",
@@ -28,6 +28,17 @@
               // Style imports.
               ["^.+\\.?(css)$"]
             ]
+          }
+        ],
+        "@typescript-eslint/no-unused-vars": "off",
+        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-vars": [
+          "warn",
+          {
+            "vars": "all",
+            "varsIgnorePattern": "^_",
+            "args": "after-used",
+            "argsIgnorePattern": "^_"
           }
         ]
       }
